# uwdtool

./: .gitignore  LICENSE  README-kr.md  README.kr.md  README.md  pyproject.toml
.github/: FUNDING.yml
uwdtool/: BinaryReader.py  Common.py  CompressionManager.py  Inspector.py  Packer.py  UWDTool.py  UnityWebData.py  Unpacker.py
uwdtool/brotli/: bro.py  brotli.cp310-win32.pyd  brotli.cp310-win_amd64.pyd  brotli.cp311-win32.pyd  brotli.cp311-win_amd64.pyd  brotli.cp312-win32.pyd  brotli.cp312-win_amd64.pyd  brotli.cp313-win32.pyd  brotli.cp313-win_amd64.pyd  brotli.cp38-win32.pyd  brotli.cp38-win_amd64.pyd  brotli.cp39-win32.pyd  brotli.cp39-win_amd64.pyd  test.py
