[tool.poetry]
name = "uwdtool"
version = "1.2.0.dev1"
description = "The tool to pack and unpack UnityWebData 1.0 files"
authors = ["yuria0309"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
uwdtool = "uwdtool.UWDTool:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
